#10 Add message on notebook usage

--- a/notebook/preparation/第2回20220419_予習.ipynb
+++ b/notebook/preparation/第2回20220419_予習.ipynb
@@ -4,11 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<font color=\"red\">自分で書いたコードを保存するため、「ドライブにコピー」を押してください</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### <font color=\"red\">問1</font>\n",
     "\n",
-    "第1回で作った関数を (適宜改変して) 使ってUNIX時刻を計算する関数を作ってください。\n",
+    "第1回で作った関数を (適宜改変して) 使って UNIX 時刻を計算する関数を作ってください。\n",
     "\n",
-    "\\*UNIX時刻 : 1970年1月1日0時0分0秒(UTC) からの経過秒数。ほとんどのコンピュータはこの形式で時刻を扱っている。\n",
+    "\\*UNIX 時刻 : 1970年1月1日0時0分0秒 (UTC) からの経過秒数。ほとんどのコンピュータはこの形式で時刻を扱っている。\n",
     "\n",
     "**Hint :** `print` と `return` の違いを調べてみましょう。\n",
     "\n",
