#10 Fix output to be displayed on notebook

--- a/notebook/supplements/第1回20220413_解説.ipynb
+++ b/notebook/supplements/第1回20220413_解説.ipynb
@@ -220,11 +220,8 @@
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{- b - \\sqrt{- 4 a c + b^{2}}}{2 a}$"
-      ],
       "text/plain": [
-       "(-b - sqrt(-4*a*c + b**2))/(2*a)"
+       "[(-b - sqrt(-4*a*c + b**2))/(2*a), (-b + sqrt(-4*a*c + b**2))/(2*a)]"
       ]
      },
      "execution_count": 6,
@@ -234,30 +231,7 @@
    ],
    "source": [
     "# 文字のまま解くこともできる\n",
-    "sympy.solve(equation, x)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{- b + \\sqrt{- 4 a c + b^{2}}}{2 a}$"
-      ],
-      "text/plain": [
-       "(-b + sqrt(-4*a*c + b**2))/(2*a)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sympy.solve(equation, x)[1]"
+    "sympy.solve(equation, x)"
    ]
   },
   {
@@ -289,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
