--- a/notebook/supplements/第2回20220419_解説.ipynb
+++ b/notebook/supplements/第2回20220419_解説.ipynb
@@ -4,6 +4,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <font color=\"red\">予習 問1</font>\n",
+    "\n",
+    "第1回で作った関数を (適宜改変して) 使って UNIX 時刻を計算する関数を作ってください。\n",
+    "\n",
+    "\\*UNIX 時刻 : 1970年1月1日0時0分0秒 (UTC) からの経過秒数。ほとんどのコンピュータはこの形式で時刻を扱っている。\n",
+    "\n",
+    "**Hint :** `print` と `return` の違いを調べてみましょう。\n",
+    "\n",
+    "```python\n",
+    ">>> unix(2022, 4, 8, 7, 14, 30)\n",
+    "1649402070\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"#7F7\">解1</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1649402070"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def days_per_year(year):\n",
+    "    if year % 4 != 0:\n",
+    "        return 365\n",
+    "    elif year % 400 == 0:\n",
+    "        return 366\n",
+    "    elif year % 100 == 0:\n",
+    "        return 365\n",
+    "    return 366\n",
+    "\n",
+    "def days_per_month(month, year):\n",
+    "    if month not in [2, 4, 6, 9, 11]:\n",
+    "        return 31\n",
+    "    elif month != 2:\n",
+    "        return 30\n",
+    "\n",
+    "    if days_per_year(year) == 366:\n",
+    "        return 29\n",
+    "    return 28\n",
+    "\n",
+    "def unix(year, month, day, hour, minute, second):\n",
+    "    elapsed_day_year = sum([days_per_year(y) for y in range(1970, year)])\n",
+    "    elapsed_day_month = sum([days_per_month(m, year) for m in range(1, month)])\n",
+    "    elapsed_days = elapsed_day_year + elapsed_day_month + (day - 1)\n",
+    "\n",
+    "    return (elapsed_days * 86400) + (hour * 3600) + (minute * 60) + second\n",
+    "\n",
+    "\n",
+    "unix(2022, 4, 8, 7, 14, 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "複雑な計算は処理ごとに関数を分けることで読みやすいコードになる。  \n",
+    "また計算結果をその関数の外で使うには値を `return` する必要がある。`print` を使った場合、結果を表示することはできるもののその値を再利用することができない。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### <font color=\"red\">問1</font>\n",
     "\n",
     "ある年月日に対して曜日を計算し、`2022年4月1日は金曜日です` のような文字列を表示 (`print`) する関数 `get_weekday(year, month, date)` を作成してください。ただし、簡単のため1970年1月1日以降を対象とし、1970年1月1日が木曜日であることを使っていいものとする。\n",
