--- a/notebook/supplements/第2回20220419_解説.ipynb
+++ b/notebook/supplements/第2回20220419_解説.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "#### <font color=\"red\">問1</font>\n",
     "\n",
-    "ある年月日に対して曜日を計算し、`2022年4月1日は金曜日です` のような文字列を表示 (`print`) する関数 `get_weekday(year, month, date)` を作成してください。ただし、簡単のため1970年1月1日以降を対象とし、1970年1月1日が木曜日であることを使っていいものとする。\n",
+    "ある年月日に対して曜日を計算し、`2022年4月1日は金曜日です` のような文字列を表示 (`print`) する関数 `get_weekday(year, month, date)` を作成してください。ただし、簡単のため1970年1月1日以降を対象とし、1970年1月1日が木曜日であることを使っていいものとします。\n",
     "\n",
     "```python\n",
     ">>> get_weekday(2022, 4, 1)\n",
