#16 Fix markdown syntax

--- a/notebook/preparation/第3回20220426_予習.ipynb
+++ b/notebook/preparation/第3回20220426_予習.ipynb
@@ -161,7 +161,7 @@
     "このようにして見つけた属性や関数は `<パッケージ名>.<モジュール名>.<関数・属性名>` のように `.` (ドット) でつなげて書くことでアクセスできる。  \n",
     "\\* パッケージ、モジュールはそれぞれフォルダ、ファイルにほぼ対応する\n",
     "\n",
-    "使い方や概要は `obj.capitalize??` や `help(obj.capitalize)` を実行する、または「<パッケージ名> <関数名>」などで検索することで調べられる。"
+    "使い方や概要は `obj.capitalize??` や `help(obj.capitalize)` を実行する、または「\\<パッケージ名\\> \\<関数名\\>」などで検索することで調べられる。"
    ]
   },
   {
