--- a/notebook/supplements/第2回20220419_解説.ipynb
+++ b/notebook/supplements/第2回20220419_解説.ipynb
@@ -77,7 +77,37 @@
    "metadata": {},
    "source": [
     "複雑な計算は処理ごとに関数を分けることで読みやすいコードになる。  \n",
-    "また計算結果をその関数の外で使うには値を `return` する必要がある。`print` を使った場合、結果を表示することはできるもののその値を再利用することができない。"
+    "また計算結果をその関数の外で使うには値を `return` する必要がある。`print` を使った場合、結果を表示することはできるもののその値を再利用することができない。\n",
+    "\n",
+    "月ごとの日数を求める関数は規則性のない条件分岐を行う必要がある。この処理は以下のような `if` 文で処理できる。  \n",
+    "ミスを減らすため、例3のようなシンプルで簡潔なコードを書けるようにしよう。\n",
+    "\n",
+    "**例1** (月ごとに条件分岐)\n",
+    "```python\n",
+    "if month == 1:\n",
+    "    return 31\n",
+    "elif month == 2:\n",
+    "    if days_per_year(year) == 366:\n",
+    "        return 29\n",
+    "    return 28\n",
+    "...\n",
+    "```\n",
+    "**例2** (`and` や `or` を使って条件をまとめる)\n",
+    "```python\n",
+    "if (month == 1) or (month == 3) or ...:\n",
+    "    return 31\n",
+    "elif month != 2:\n",
+    "    return 30\n",
+    "...\n",
+    "```\n",
+    "**例3** (`in` を使ってリストの中にあるかどうかで判別する)\n",
+    "```python\n",
+    "if month in [1, 3, 5, 7, 8, 10, 12]:\n",
+    "    return 31\n",
+    "elif month != 2:\n",
+    "    return 30\n",
+    "...\n",
+    "```"
    ]
   },
   {
